# blendernc

./: .codeclimate.yml  .commitlintrc.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  GeoNodes.py  LICENSE  README.md  __init__.py  blender_classes.py  blendernc.nodes.rst  build-test.sh  pyproject.toml  python_functions.py  requirements.txt  setup.py  sitecustomize.py  travis.yml
.github/: ISSUE_TEMPLATE.md
.github/travis/: bpy_activate_addon.py  build-test.sh
.github/workflows/: black.yml  ci.yml  commitlint.yml  github_push_source.yml  isort.yml  lint.yml  poetry_install.yml  publish-to-test-pypi.yml  release.yml  test.yml  zip_release.yml
blendernc/: UI_operators.py  __init__.py  addon_updater.py  addon_updater_ops.py  blendernc.py  decorators.py  events.py  get_utils.py  handlers.py  image.py  messages.py  msg_errors.py  node_tree.py  nodes.py  operators.py  panels.py  preferences.py  python_functions.py  socketdata.py  sockets.py  translations.py
blendernc/core/: dates.py  griddata.py  logging.py  netcdf_metadata.py  sys_utils.py  update_ui.py
blendernc/nodes/: BlenderNC_NT_node_template.py  node_categories.py  node_tree.py
develop_notebooks/: Untitled.ipynb
docs/: environment.yml  requirements.txt
geonodes/: GeoNodes.py  nodes.py  operators.py  panels.py  python_functions.py
icons/: no_image_icon.xcf
nodes/: backup  cmapsnode.py  utils_colorramp.py
test/: test_default.py
tests/: .coverage_Blender 2.92.0  blender_startup.test.py  blendernc_fails.test.py  blendernc_math.test.py  blendernc_nodes.test.py  blendernc_nodetree_settings.test.py  blendernc_operators.test.py  blendernc_performance.test.py  blendernc_simple_UI.test.py  blendernc_translation.test.py  blendernc_zip_install.test.py  bpy_activate_addon.py  build-test.sh  coverage-combine.sh  create_free_nodes.test.py  default_xarray.test.py  docker_test.sh  import_xarray.test.py  nolib_import.test_nolib.py  proper_import.test.py  run_tests.py  test_utils.py
(+173 files in other folders)
