[tool.poetry]
name = "blendernc"
version = "0.4.10"
description = "Blender add-on to import datasets (netCDF, grib, and zarr)"
authors = ["josuemtzmo <josue.martinezmoreno@anu.edu.au>"]
license = "MIT"
keywords = ["visualization", "3D"]
readme = "README.md"
homepage = "https://github.com/blendernc/blendernc"
repository = "https://github.com/blendernc/blendernc"
include = [
    "LICENSE",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Plugins",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: GIS",
]
packages = [
    { include = "blendernc", from = "." },
]

[tool.poetry.urls]
"Changelog" = "https://github.com/blendernc/blendernc/blob/master/CHANGELOG.md"

[tool.semantic_release]
version_variable = [
    "blendernc/__init__.py:__version__",
    "docs/source/conf.py:release"
]
version_toml = [
    "pyproject.toml:tool.poetry.version"
]

version_pattern= [
    '.github/ISSUE_TEMPLATE.md:BlenderNC Version: {version}',
    # 'blendernc/__init__.py:    "version": (0\d+\,\d+\,\d+)'
]
major_on_zero = false
branch = "master"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
click = "^7"
toml = "^0.10.2"
numpy = "^1.21.2"
Bottleneck = "1.2.1"
zarr = "^2.9.4"
ecmwflibs = "^0.3.13"
cfgrib = "^0.9.9"
xarray = "^0.19.0"
cmocean = "^2.0"
matplotlib = "^3.4.3"
dask = "^2021.8.1"
scipy = "^1.7.1"
netCDF4 = "^1.5.7"
toolz = "^0.11.1"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
python-semantic-release = "^7.16.2"
flake8 = "^3.9.2"
black = "^20.8b1"
isort = "^5.8.0"
pre-commit = "^2.13.0"
commitizen = "^2.18.1"
